--- a/ListenList/ListenList/Sample.xcconfig
+++ b/ListenList/ListenList/Sample.xcconfig
@@ -7,3 +7,5 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
+SPOTIFY_API_CLIENT_ID =
+SPOTIFY_API_CLIENT_SECRET =
