--- a/ListenList/ListenList/Info.plist
+++ b/ListenList/ListenList/Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>SPOTIFY_API_CLIENT_SECRET</key>
-	<string>c7f44f90e2f04689bd213acf1498ac4d</string>
 	<key>SPOTIFY_API_CLIENT_ID</key>
-	<string>dc4910da820648ce8d46f86864804096</string>
+	<string>$(SPOTIFY_API_CLIENT_ID)</string>
+	<key>SPOTIFY_API_CLIENT_SECRET</key>
+	<string>$(SPOTIFY_API_CLIENT_SECRET)</string>
 </dict>
 </plist>
