--- a/ListenList/Podfile
+++ b/ListenList/Podfile
@@ -4,7 +4,7 @@
 target 'ListenList' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
-  pod 'SQLite.swift'
+  pod 'Firebase/Firestore'
   # Pods for ListenList
 
   target 'ListenListTests' do
